# MPI2324Study

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MPIstudy  MPIstudy.cpp  Makefile  README.md  cmake_install.cmake  ejemplo01.cpp  ejemplo02  ejemplo02.cpp  ejemplo03.cpp  ejemplo03_completo.cpp  ejemplo03_v3.cpp  ejemplo_matrices.cpp  ejemplo_matrices2.cpp  mpi2324.cbp
.cmake/api/v1/reply/: cache-v2-03790830dd711154a5e9.json  cache-v2-ef66da973cd44f114ad6.json  cmakeFiles-v1-1909da5ecded7ae1e7a9.json  codemodel-v2-59ce803ea998ffdb7b0e.json  codemodel-v2-8a5929ff82acc63cc1b2.json  index-2024-01-30T03-47-48-0213.json  index-2024-01-30T05-27-28-0760.json  target-ejemplo01-Debug-7739f7ad39f2ec14adaf.json  target-ejemplo01-Debug-d48ef4f71b6d268ba578.json  target-ejemplo03_completo-Debug-1150ac3c23fccefee144.json  target-ejemplo03_completo-Debug-7b8c07ea8505b250ee03.json
